[package]
name = "dsa-lib"
version = "0.1.2"

authors = ["Moritz Scheuerle <moritzscheuerle@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["glsl", "toml"]
description = """
A Shader generation tool from TOML to GLSL written in Rust
"""

categories = ["graphics", "game-engines", "rendering::engine", "rendering", "parsing"]

edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.9"
indexmap = { version = "1.9.1", features = ["serde-1"] }
serde = "1.0.97"
serde_derive = "1.0"
